# nvflow

./: .gitignore  justfile  pyproject.toml  test.yaml
.snakemake/metadata/: c3RhdGljLzRfdGVtcC90ZXN0L3Ntay9ncmFwaHMvMjAwMC9ncmFwaHMvb3V0Lmpzb24=  c3RhdGljLzRfdGVtcC90ZXN0L3Ntay9pbnRlcm1lZC8xMDAwL21ldHJpY3Mvb3V0Lmpzb24=  c3RhdGljLzRfdGVtcC90ZXN0L3Ntay9pbnRlcm1lZC8xMDAwL2dyYXBocy9kYXRh  c3RhdGljLzRfdGVtcC90ZXN0L3Ntay9pbnRlcm1lZC8xMDAwL2dyYXBocy9vdXQuanNvbg==  c3RhdGljLzRfdGVtcC90ZXN0L3Ntay9pbnRlcm1lZC8yMDAwL21ldHJpY3Mvb3V0Lmpzb24=  c3RhdGljLzRfdGVtcC90ZXN0L3Ntay9pbnRlcm1lZC8yMDAwL2dyYXBocy9kYXRh  c3RhdGljLzRfdGVtcC90ZXN0L3Ntay9pbnRlcm1lZC8yMDAwL2dyYXBocy9vdXQuanNvbg==  c3RhdGljLzRfdGVtcC90ZXN0L3Ntay9zaGFyZWQvZmxvd21ldHJpY3Mvb3V0LmNzdg==
apptainer/: recipe.def
scripts/: apptainer_vars.sh  copy.sh  copy_test_data.sh  create_result_samples.sh  interact.sh  run.sh  sbatch_run.sh  test.sh  update_plyze.sh  wind_dir_vars.sh
scripts/local/: reset.sh
scripts/moves/: run.sh  test.sh
scripts/sbatch/: run.sh  test.sh
scripts/sm/: run.sh  test.sh  test_local.sh
scripts/smk/: run.sh  test.sh
smkconfig/: apptainer_run.yaml  apptainer_run_v0.yaml  apptainer_test.yaml  local_test.yaml  more_test.yaml  test.yaml  v1.yaml  wind_dir.yaml  wind_dir_time_select.yaml  wind_time_sel.yaml
src/nvflow/: __init__.py  constants.py  figure_utils.py  paths.py  times.py
src/nvflow/analysis/: constants.py  metrics_hist.py  qoi_helpers.py  (+2 more)
tests/: to_test.py
workflow/: Snakefile
workflow/rules/: ambient.smk  common.smk  flow.smk  graphs.smk  metrics.smk  plan_qois.smk  qois.smk
(+2619 files in other folders)
